--- a/turbine-server/build.gradle
+++ b/turbine-server/build.gradle
@@ -27,8 +27,14 @@ repositories {
 
 
 dependencies {
-    compile('org.springframework.cloud:spring-cloud-starter-turbine')
-    compile('org.springframework.cloud:spring-cloud-starter-turbine-stream')
+    compile("org.springframework.boot:spring-boot-starter-web") {
+        exclude module: 'spring-boot-starter-tomcat'
+    }
+    compile("org.springframework.boot:spring-boot-starter-undertow")
+    compile("org.springframework.boot:spring-boot-starter-actuator")
+    compile ("org.springframework.cloud:spring-cloud-starter-turbine")
+
+    //compile('org.springframework.cloud:spring-cloud-starter-turbine-amqp:1.0.0.RELEASE')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
