--- a/product-proxy/src/main/resources/application.yml
+++ b/product-proxy/src/main/resources/application.yml
@@ -8,7 +8,7 @@ eureka:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
   instance:
-    preferIpAddress: true
+    hostname: productdomain
     leaseRenewalIntervalInSeconds: 5
     metadataMap:
       instanceId: "${spring.application.name}:${random.value}"
