--- a/turbine-server/build.gradle
+++ b/turbine-server/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-undertow")
     compile("org.springframework.boot:spring-boot-starter-actuator")
     compile ("org.springframework.cloud:spring-cloud-starter-turbine")
+    compile('org.springframework.cloud:spring-cloud-starter-hystrix-dashboard')
 
     //compile('org.springframework.cloud:spring-cloud-starter-turbine-amqp:1.0.0.RELEASE')
     testCompile('org.springframework.boot:spring-boot-starter-test')
